--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../../../../Program Files/Android/android-sdk/extras/android/support/v7/appcompat
+android.library.reference.1=../adt-bundle-windows-x86_64-20131030/sdk/extras/android/support/v7/appcompat
